@@ -25,7 +25,7 @@
 #include "alist.h"
 #include "librarian.h"
 
-// tertiary component.
+// The 'tertiary' component.
 
 const char *const Tertiary::component = "tertiary";
 
@@ -45,5 +45,57 @@ Tertiary::~Tertiary ()
 
 static Librarian Tertiary_init (Tertiary::component, "\
 Transport of water and solute outside the matrix.");
+
+// The 'none' model.
+
+class TertiaryNone : public Tertiary
+{
+  // Simulation.
+  void tick_water (const Geometry&, const Soil&, const SoilWater&,
+                   const double /* dt */,
+                   Surface& /* surface */,
+                   std::vector<double>& /* S_drain */,
+                   std::vector<double>& /* S_matrix */,
+                   std::vector<double>& /* q_tertiary */, 
+                   Treelog&)
+  { }
+  void output (Log&) const
+  { }
+
+  // Create and Destroy.
+  bool initialize (const Geometry&, const Soil&, const Scope&,  
+                   const double /* pipe_position */, Treelog&)
+  { return true; }
+  bool check (const Geometry&, Treelog&) const
+  { return true; }
+public:
+  TertiaryNone (Block& al)
+    : Tertiary (al)
+  { }
+};
+
+static struct TertiaryNoneSyntax
+{
+  static Model& make (Block& al)
+  { return *new TertiaryNone (al); }
+  TertiaryNoneSyntax ()
+  {
+    Syntax& syntax = *new Syntax ();
+    AttributeList& alist = *new AttributeList ();
+    alist.add ("description", "No tertiary transport.");
+    Librarian::add_type (Tertiary::component, "none", alist, syntax, &make);
+  }
+} TertiaryNone_syntax;
+
+const AttributeList& 
+Tertiary::none_model ()
+{
+  static AttributeList alist;
+
+  if (!alist.check ("type"))
+    alist.add ("type", "none");
+
+  return alist;
+}
 
 // tertiary.C ends here.
